Modernize plugin for IntelliJ IDEA 2026.x and Java 26
- Add Gradle 9.4 wrapper and GitHub Actions CI workflow
- Upgrade IntelliJ Platform Plugin to 2.18.1 and target Java 21 bytecode with Java 26 toolchain
- Update Mockito to 5.23.0 to support Java 26 test execution
- Replace internal RunManagerImpl and RunnerAndConfigurationSettingsImpl with ExecutionEnvironmentBuilder
- Replace deprecated ProjectManagerImpl with ProjectManagerEx and OpenProjectTask
- Replace legacy TypedActionHandler replacement with standard TypedHandlerDelegate extension point
- Make LoginDialog non-modal and execute authentication on pooled threads off the EDT
- Fix course name vs title handling across SettingsTmc and UI windows
- Optimize course lookups in ObjectFinder by caching server course mappings
- Clean up legacy e.printStackTrace() and SLF4J argument logging across services and UI